duniverse/menhirLib.20200211/test/static/bad/symbolstartpos-with-param.mly
%token A B
%start<unit> main
%%
main: A B { $symbolstartpos($2) }
