duniverse/menhirLib.20200211/test/static/bad/symbolstartpos-with-param.exp
File "symbolstartpos-with-param.mly", line 4, characters 12-31:
Error: $symbolstartpos does not take a parameter.
